<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application name -->
    <string name="app_name">Code review</string>

    <!-- Sort -->
    <string name="action_sort">Sort</string>

    <!-- Settings -->
    <string name="action_settings">Settings</string>

    <!-- Donate -->
    <string name="action_donate">Donate</string>

    <!-- Add -->
    <string name="action_add">Add</string>

    <!-- Rename -->
    <string name="action_rename">Rename</string>

    <!-- Mark to rename -->
    <string name="action_mark_to_rename">Mark to rename</string>

    <!-- Delete -->
    <string name="action_delete">Delete</string>

    <!-- Mark to delete -->
    <string name="action_mark_to_delete">Mark to delete</string>

    <!-- Note -->
    <string name="action_note">Note</string>

    <!-- Reload -->
    <string name="action_reload">Reload</string>

    <!-- Close -->
    <string name="action_close">Close</string>

    <!-- Sort types -->
    <string-array name="sort_types">
        <item>By name</item>
        <item>By type</item>
        <item>By size</item>
    </string-array>

    <!-- Plurals for selecting folders -->
    <plurals name="selected_folders_plurals">
        <item quantity="one">%1$d folder</item>
        <item quantity="two">%1$d folders</item>
        <item quantity="few">%1$d folders</item>
        <item quantity="many">%1$d folders</item>
        <item quantity="other">%1$d folders</item>
    </plurals>

    <!-- Plurals for selecting files -->
    <plurals name="selected_files_plurals">
        <item quantity="one">%1$d file</item>
        <item quantity="two">%1$d files</item>
        <item quantity="few">%1$d files</item>
        <item quantity="many">%1$d files</item>
        <item quantity="other">%1$d files</item>
    </plurals>

    <!-- Plurals for deleting folders -->
    <plurals name="delete_folders_plurals">
        <item quantity="one">%1$d folder</item>
        <item quantity="two">%1$d folders</item>
        <item quantity="few">%1$d folders</item>
        <item quantity="many">%1$d folders</item>
        <item quantity="other">%1$d folders</item>
    </plurals>

    <!-- Plurals for deleting files -->
    <plurals name="delete_files_plurals">
        <item quantity="one">%1$d file</item>
        <item quantity="two">%1$d files</item>
        <item quantity="few">%1$d files</item>
        <item quantity="many">%1$d files</item>
        <item quantity="other">%1$d files</item>
    </plurals>

    <!-- Select files title in ActionMode -->
    <string name="select_files">Select files</string>

    <!-- Folders selected subtitle in ActionMode -->
    <plurals name="folders_selected">
        <item quantity="one">%1$s selected</item>
        <item quantity="two">%1$s selected</item>
        <item quantity="few">%1$s selected</item>
        <item quantity="many">%1$s selected</item>
        <item quantity="other">%1$s selected</item>
    </plurals>

    <!-- Files selected subtitle in ActionMode -->
    <plurals name="files_selected">
        <item quantity="one">%1$s selected</item>
        <item quantity="two">%1$s selected</item>
        <item quantity="few">%1$s selected</item>
        <item quantity="many">%1$s selected</item>
        <item quantity="other">%1$s selected</item>
    </plurals>

    <!-- Folders and files selected subtitle in ActionMode -->
    <string name="folders_and_files_selected">%1$s and %2$s selected</string>

    <!-- Title for rename dialog in files activity -->
    <string name="dialog_rename_title">Name</string>

    <!-- Message for rename dialog in files activity -->
    <string name="dialog_rename_message">Input name:</string>

    <!-- Show message if there is no last names -->
    <string name="no_last_names">Please input at least one name to use it later</string>

    <!-- Show message if name is empty -->
    <string name="empty_name">Please input name</string>

    <!-- Title for note dialog in files activity -->
    <string name="dialog_input_note_title">Note</string>

    <!-- Message for note dialog in files activity -->
    <string name="dialog_input_note_message">Input note:</string>

    <!-- Show message if there is no last notes -->
    <string name="no_last_notes">Please input at least one note to use it later</string>

    <!-- Title for dialog asking opening big file in files activity -->
    <string name="dialog_open_big_file_title">Big file</string>

    <!-- Message for dialog asking opening big file in files activity -->
    <string name="dialog_open_big_file_message">Size of file %1$s is too big. Do you want to open it?</string>

    <!-- Need to rename -->
    <string name="need_to_rename">Need to rename</string>

    <!-- Rename to %1$s -->
    <string name="rename_to">Rename to %1$s</string>

    <!-- Need to delete -->
    <string name="need_to_delete">Need to delete</string>

    <!-- Can't rename folder -->
    <string name="can_not_rename_folder">Can not rename folder</string>

    <!-- Can't rename file -->
    <string name="can_not_rename_file">Can not rename file</string>

    <!-- Title for delete dialog in files activity -->
    <string name="dialog_delete_title">Delete</string>

    <!-- Message for delete dialog in files activity -->
    <string name="dialog_delete_folders_or_files_message">Do you want to delete %1$s?</string>

    <!-- Message for delete dialog in files activity -->
    <string name="dialog_delete_folders_and_files_message">Do you want to delete %1$s and %2$s?</string>

    <!-- Can't delete folder -->
    <string name="can_not_delete_folder">Can not delete folder: %1$s</string>

    <!-- Can't delete file -->
    <string name="can_not_delete_file">Can not delete file: %1$s</string>

    <!-- Can't delete folders/files -->
    <string name="can_not_delete_folders_or_files">Can not delete %1$s</string>

    <!-- Can't delete folders and files -->
    <string name="can_not_delete_folders_and_files">Can not delete %1$s and %2$s</string>

    <!-- Press back one more time in file explorer -->
    <string name="press_again_to_exit">Press again to exit</string>

    <!-- Extension image content description -->
    <string name="extension_image">Extension</string>

    <!-- Review loading message -->
    <string name="loading">Loading&#8230;</string>

    <!-- Review file not found message -->
    <string name="file_not_found">File not found</string>

    <!-- Title for comment dialog in review activity -->
    <string name="dialog_input_comment_title">Comment</string>

    <!-- Message for comment dialog in review activity -->
    <string name="dialog_input_comment_message">Input comment (empty comment to remove it):</string>

    <!-- Show message if there is no last comments -->
    <string name="no_last_comment">Please input at least one comment to use it later</string>

    <!-- Ignore files activity title -->
    <string name="title_activity_ignore_files">Ignore files</string>

    <!-- Title for dialog in ignore files activity -->
    <string name="dialog_add_file_title">Ignore file</string>

    <!-- Message for dialog in ignore files activity -->
    <string name="dialog_add_file_message">Input name of file or pattern\n(\'*\' and \'?\' is allowed):</string>

    <!-- Select items title in ActionMode -->
    <string name="select_items">Select items</string>

    <!-- Items selected subtitle in ActionMode -->
    <plurals name="items_selected">
        <item quantity="one">%1$d item selected</item>
        <item quantity="two">%1$d items selected</item>
        <item quantity="few">%1$d items selected</item>
        <item quantity="many">%1$d items selected</item>
        <item quantity="other">%1$d items selected</item>
    </plurals>

</resources>
