<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.griscom.codereview.activities.FilesActivity" >

    <item
        android:id="@+id/action_mark_to_rename"
        android:orderInCategory="100"
        android:title="@string/action_mark_to_rename"
        android:icon="@drawable/mark_rename"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_mark_to_delete"
        android:orderInCategory="200"
        android:title="@string/action_mark_to_delete"
        android:icon="@drawable/mark_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_note"
        android:orderInCategory="300"
        android:title="@string/action_note"
        android:icon="@drawable/note"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_rename"
        android:orderInCategory="400"
        android:title="@string/action_rename"
        android:icon="@drawable/rename"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="500"
        android:title="@string/action_delete"
        android:icon="@drawable/delete"
        app:showAsAction="ifRoom" />

</menu>
